Adds margin-top for slide up/down button

--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ input[type="search"] {
 .slideButton {  /*Dynamically created slide button*/
   display: block;
   margin: 0 auto;
+  margin-top: 3px;
   text-align: center;
   height: 20px;
   width: 90px;
