--- a/server/public/style.css
+++ b/server/public/style.css
@@ -1,48 +1,50 @@
-html, body {
+html, body {  /*initialize html/body*/
   margin: 0px;
   padding: 0px;
   font: inherit;
 }
 
-body {
+body {  /*body*/
   font-family: arial, sans-serif;
   background-image: url(http://www.hd-freewallpapers.com/upload/eagle-image/bald-eagle-flag-images-wallpaper.jpg);
-  background-size: 100%;
+  background-size: cover;
+  background-color: cover;
   background-repeat: no-repeat;
 }
-h1, h2 {
+
+h1, h2 {  /*headings in header*/
   margin: 0 auto;
   text-align: center;
 }
 
-#buttons {
+#buttons {  /*buttons div*/
   display: flex;
   justify-content: center;
 }
 
-#show, #winner {
+#show, #winner {  /*show/winner buttons*/
   margin: 0px 0px 0px 30px;
 }
 
-#displayCandidates, #displayWinner {
+#displayCandidates, #displayWinner {  /*display div's*/
+  margin: 0 auto;
   padding: 20px;
   display: flex;
   justify-content: center;
 }
 
-h3 {
+h3 {  /*Candidate header*/
   text-align: center;
 }
 
-#dem, #rep {
+#dem, #rep {  /*party div's*/
   background: #FDFDF0;
   display: inline-block;
   min-width: 200px;
-  margin: 0 auto;
   margin: 0px 0px 0px 40px;
 }
 
-#displayWinner {
+#displayWinner {  /*winner div*/
   font-size: 40px;
   font-weight: bold;
   margin: 300px 0px 0px 0px;
