it's pretty now

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -4,6 +4,7 @@
   <script type="text/javascript" src="/vendor/angular/angular.min.js"></script>
   <script type="text/javascript" src="/assets/scripts/client.min.js"></script>
   <link href="/views/styles.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Orbitron:400,900|Bangers|Architects+Daughter|Kaushan+Script|Satisfy|Economica:400,700|Montez" rel="stylesheet" type="text/css">
   <meta charset="utf-8">
   <title>Twitter Generator</title>
 </head>
@@ -13,10 +14,20 @@
     <button ng-click="randomize()">Generate</button>
 
   </div>
-  <div class="allTheThings" ng-repeat="name in randomNames">
-    <a ng href="http://www.twitter.com/{{name}}">@{{name}}</a>
-    <input type = "checkbox">
+  <!-- close generator -->
+
+  <div class="allTheThings">
+    <div class="twitterName" ng-repeat="name in randomNames">
+      <a ng href="http://www.twitter.com/{{name}}" target="_blank">@{{name}}</a>
+      <input ng-model="checked" type = "checkbox">
+      <span ng-show="checked">
+        Not available
+      </span>
+    </div>
+    <!-- close twitterName -->
   </div>
+  <!-- close allTheThings -->
+
 </body>
 
 </html>
