--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -28,24 +28,72 @@
       Reporter <input type="text" ng-model="avatar.ticket.reporter" />
       <button ng-click="avatar.submitTicket()">Submit Ticket</button>
     </div>
+      <h1>Tickets Open</h1>
+      <div class="ticket row col-md-4" ng-repeat="ticket in avatar.tickets">
+        <div class="well">
+          <p>
+            <span ng-hide="edit">
+              Name: {{ ticket.name }}
+            </span>
+            <span ng-show="edit">
+              <input type="text" ng-model="avatar.editTicket.name" />
+            </span>
+          </p>  <!--name-->
+          <p>
+            <span ng-hide="edit">
+              Type: {{ ticket.type }}
+            </span>
+            <span ng-show="edit">
+              <input type="text" ng-model="avatar.editTicket.type" />
+            </span>
+          </p>  <!--type-->
+          <p>
+            <span ng-hide="edit">
+              Priority: {{ ticket.priority }}
+            </span>
+            <span ng-show="edit">
+              <input type="text" ng-model="avatar.editTicket.priority" />
+            </span>
+          </p>  <!--priority-->
+          <p>
+            <span ng-hide="edit">
+              Description: {{ ticket.description }}
+            </span>
+            <span ng-show="edit">
+              <input type="text" ng-model="avatar.editTicket.description" />
+            </span>
+          </p>  <!--description-->
+          <p>
+            <span ng-hide="edit">
+              Assignee: {{ ticket.assignee }}
+            </span>
+            <span ng-show="edit">
+              <input type="text" ng-model="avatar.editTicket.assignee" />
+            </span>
+          </p>  <!--assignee-->
+          <p>
+            <span ng-hide="edit">
+              Reporter: {{ ticket.reporter }}
+            </span>
+            <span ng-show="edit">
+              <input type="text" ng-model="avatar.editTicket.reporter" />
+            </span>
+          </p>  <!--reporter-->
+          <p> Date Created: {{ ticket.created }}</p>
+          <p> Date Updated: {{ ticket.updated }}</p>
 
-    <main class="container">
-        <h1>Tickets Open</h1>
-        <div class="ticket row col-md-4" ng-repeat="ticket in avatar.tickets">
-          <div class="well">
-            <p> Name: {{ ticket.name }} </p>
-            <p> Type: {{ ticket.type }} </p>
-            <p> Priority: {{ ticket.priority }} </p>
-            <p> Description: {{ ticket.description }} </p>
-            <p> Assignee: {{ ticket.assignee }} </p>
-            <p> Reporter: {{ ticket.reporter }} </p>
-            <p> Date Created: {{ ticket.created }} </p>
-            <p> Date Updated: {{ ticket.updated }} </p>
 
-            <!--buttons-->
-            <button class="btn btn-success" ng-click="avatar.completeTicket(ticket)">Complete </button>
-          </div>  <!--well-->
-        </div>  <!--row col-->
-    </main> <!--main-->
+          <!--buttons-->
+          <button class="btn btn-danger" ng-click="avatar.completeTicket(ticket)" ng-hide="edit">
+            Complete
+          </button>
+          <button class="btn btn-info" ng-click="avatar.makeEdits(ticket); edit = true" ng-hide="edit">
+            Edit
+          </button>
+          <button class="btn btn-info" ng-click="avatar.saveEdits(ticket); edit = false" ng-show="edit">
+            Save
+          </button>
+        </div>  <!--well-->
+      </div>  <!--row col-->
   </body> <!--body-->
 </html> <!--html-->
