Adds more bootstrap styling

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -14,92 +14,93 @@
     <script src="/assets/scripts/client.min.js"></script>
     <link rel="stylesheet" href="views/style.css" />
 
-
-
   </head>
   <body ng-controller="TicketController as avatar">
-    <div class="container">
-      <h1>Prime Ticket Management System</h1>
-      Name <input type="text" ng-model="avatar.ticket.name" />
-      Type <input type="text" ng-model="avatar.ticket.type" />
-      Priority <input type="text" ng-model="avatar.ticket.priority" />
-      Description <input type="text" ng-model="avatar.ticket.description" />
-      Assignee <input type="text" ng-model="avatar.ticket.assignee" />
-      Reporter <input type="text" ng-model="avatar.ticket.reporter" />
-      <button ng-click="avatar.submitTicket()">Submit Ticket</button>
+    <div class="page-header">
+      <h1 class="text-center">Prime Ticket Management System</h1>
+      <div>
+        Name <input type="text" ng-model="avatar.ticket.name" />
+        Type <input type="text" ng-model="avatar.ticket.type" />
+        Priority <input type="text" ng-model="avatar.ticket.priority" />
+        Assignee <input type="text" ng-model="avatar.ticket.assignee" />
+        Reporter <input type="text" ng-model="avatar.ticket.reporter" />
+      </div>
+      <div class="description">
+        Description <input class="descripInput form-control .input-lg" type="text" ng-model="avatar.ticket.description" />
+      </div>
+      <button class="submit" ng-click="avatar.submitTicket()">Submit Ticket</button>
     </div>
-      <h1>Tickets Open</h1>
-      <div class="ticket row col-md-4" ng-repeat="ticket in avatar.tickets">
-        <div class="well">
-          <p>
-            Name:
-            <span ng-hide="edit">
-              {{ ticket.name }}
-            </span>
-            <span ng-show="edit">
-              <input type="text" ng-model="avatar.editTicket.name" />
-            </span>
-          </p>  <!--name-->
-          <p>
-            Type:
-            <span ng-hide="edit">
-              {{ ticket.type }}
-            </span>
-            <span ng-show="edit">
-              <input type="text" ng-model="avatar.editTicket.type" />
-            </span>
-          </p>  <!--type-->
-          <p>
-            Priority:
-            <span ng-hide="edit">
-              {{ ticket.priority }}
-            </span>
-            <span ng-show="edit">
-              <input type="text" ng-model="avatar.editTicket.priority" />
-            </span>
-          </p>  <!--priority-->
-          <p>
-            Description:
-            <span ng-hide="edit">
-              {{ ticket.description }}
-            </span>
-            <span ng-show="edit">
-              <input type="text" ng-model="avatar.editTicket.description" />
-            </span>
-          </p>  <!--description-->
-          <p>
-            Assignee:
-            <span ng-hide="edit">
-              {{ ticket.assignee }}
-            </span>
-            <span ng-show="edit">
-              <input type="text" ng-model="avatar.editTicket.assignee" />
-            </span>
-          </p>  <!--assignee-->
-          <p>
-            Reporter:
-            <span ng-hide="edit">
-              {{ ticket.reporter }}
-            </span>
-            <span ng-show="edit">
-              <input type="text" ng-model="avatar.editTicket.reporter" />
-            </span>
-          </p>  <!--reporter-->
-          <p> Date Created: {{ ticket.created }}</p>
-          <p> Date Updated: {{ ticket.updated }}</p>
+    <h2 class="text-center">Tickets Open</h2>
+    <div class="ticket row col-md-4" ng-repeat="ticket in avatar.tickets">
+      <div class="well">
+        <p>
+          Name:
+          <span ng-hide="edit">
+            {{ ticket.name }}
+          </span>
+          <span ng-show="edit">
+            <input type="text" ng-model="avatar.editTicket.name" />
+          </span>
+        </p>  <!--name-->
+        <p>
+          Type:
+          <span ng-hide="edit">
+            {{ ticket.type }}
+          </span>
+          <span ng-show="edit">
+            <input type="text" ng-model="avatar.editTicket.type" />
+          </span>
+        </p>  <!--type-->
+        <p>
+          Priority:
+          <span ng-hide="edit">
+            {{ ticket.priority }}
+          </span>
+          <span ng-show="edit">
+            <input type="text" ng-model="avatar.editTicket.priority" />
+          </span>
+        </p>  <!--priority-->
+        <p>
+          Assignee:
+          <span ng-hide="edit">
+            {{ ticket.assignee }}
+          </span>
+          <span ng-show="edit">
+            <input type="text" ng-model="avatar.editTicket.assignee" />
+          </span>
+        </p>  <!--assignee-->
+        <p>
+          Reporter:
+          <span ng-hide="edit">
+            {{ ticket.reporter }}
+          </span>
+          <span ng-show="edit">
+            <input type="text" ng-model="avatar.editTicket.reporter" />
+          </span>
+        </p>  <!--reporter-->
+        <p> Date Created: {{ ticket.created }}</p>
+        <p> Date Updated: {{ ticket.updated }}</p>
+        <p>
+          Description:
+          <span ng-hide="edit">
+            {{ ticket.description }}
+          </span>
+          <span ng-show="edit">
+            <input type="text" ng-model="avatar.editTicket.description" />
+          </span>
+        </p>  <!--description-->
 
-
-          <!--buttons-->
-          <button class="btn btn-danger" ng-click="avatar.completeTicket(ticket)" ng-hide="edit">
-            Complete
-          </button>
-          <button class="btn btn-info" ng-click="avatar.makeEdits(ticket); edit = true" ng-hide="edit">
-            Edit
-          </button>
-          <button class="btn btn-info" ng-click="avatar.saveEdits(ticket); edit = false" ng-show="edit">
-            Save
-          </button>
-        </div>  <!--well-->
-      </div>  <!--row col-->
+        <!--buttons-->
+        <button class="btn btn-danger text-center" ng-click="avatar.completeTicket(ticket)" ng-hide="edit">
+          Complete
+        </button>
+        <button class="btn btn-info text-center" ng-click="avatar.makeEdits(ticket); edit = true" ng-hide="edit">
+          Edit
+        </button>
+        <button class="btn btn-info text-center" ng-click="avatar.saveEdits(ticket); edit = false" ng-show="edit">
+          Save
+        </button>
+      </div>  <!--well-->
+    </div>  <!--row col-->
   </body> <!--body-->
 </html> <!--html-->
