--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -6,28 +6,29 @@
 
     <!-- Libraries/Framework -->
     <script src="vendor/angular/angular.min.js"></script>
-    <link href="vendor/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css"/>
     <!-- Development Files -->
     <script src="assets/scripts/client.min.js"></script>
+    <link rel="stylesheet" href="assets/styles/style.css" />
 
   </head>
   <body class="container-fluid" ng-controller="TaskController as tc">
-    <h1>Task Manager</h1>
+    <div class="jumbotron">
+      <h1 class="text-center">Task Manager</h1>
 
-    <form ng-submit="tc.submitTask()">
-      <label>Enter task</label>
-      <input type="text" ng-model="tc.task.todo" />
-      <input type="submit" />
-    </form>
+      <form ng-submit="tc.submitTask()">
+        <label>Enter task</label>
+        <input type="text" ng-model="tc.task.todo" />
+        <input type="submit" />
+      </form>
+    </div>  <!--jumbotron-->
 
     <div>
       <ul>
-        <li ng-repeat="item in tc.tasksList">
-          {{ item.id }}     {{ item.task }}
-          <button ng-click="tc.completeTask(item)" >
-            Complete
-          </button>
-          <button ng-click="tc.deleteTask(item)">Delete</button>
+        <li ng-repeat = "item in tc.tasksList">
+          <span ng-class="{taskComplete : item.status, taskNotComplete : !item.status}" >{{ item.task }}</span>
+          <input type="button" value="Complete" class="sm-btn btn-info" ng-click="tc.completeTask(item)" />
+          <input type="button" value="Delete" class="sm-btn btn-danger" ng-click="tc.deleteTask(item)" />
         </li>
       </ul>
     </div>
