--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="assets/styles/styles.css" />
   </head>
   <body ng-controller="HeroController as hero">
-    <h1 class="text-center">Super Hero Tracker</h1>
+    <h1 class="text-center">Department of Superhero Knowledge Database</h1>
     <form ng-submit="hero.saveProfile()">
       <ul style="list-style-type:none">
         <li>
